--- a/index.html
+++ b/index.html
@@ -4,21 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=El+Messiri|Monoton" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Justin's Incredibly Warm Portfolio</title>
 </head>
 <body>
-    <header>Well, hello there!</header>
+    <header>Software That Scorches</header>
     <div class="container"> 
-        <div class="box about">About</div>
-        <div class="box vitae">CV</div>
-        <div class="box contact">Contact</div>
-        <div class="box tools">Tools</div>
-        <div class="box projects">Projects</div>
-        <div class="box startups">Startups</div>        
-        <div class="box travel">Travel</div>
-        <div class="box food">Food</div>
-        <div class="box fun">Fun</div>        
+        <div class="box about"><a href="#">About</a></div>
+        <div class="box vitae"><a href="#">CV</a></div>
+        <div class="box contact"><a href="#">Contact</a></div>
+        <div class="box tools"><a href="#">Tools</a></div>
+        <div class="box projects"><a href="#">Projects</a></div>
+        <div class="box startups"><a href="#">Startups</a></div>        
+        <div class="box travel"><a href="#">Travel</a></div>
+        <div class="box food"><a href="#">Food</a></div>
+        <div class="box fun"><a href="#">Fun</a></div>        
     </div>
     <footer class="bottom"><span>&copy; 2019 Justin D. Cotton | <a href="https://github.com/JustinCotton?tab=repositories">GitHub</a> | <a href="https://www.linkedin.com/in/justindcotton/">LinkedIn</a></span></footer>
 </body>
@@ -33,4 +34,4 @@ X Student uses semantic HTML elements
 X Portfolio includes at least one image
 X Portfolio includes some flexbox or CSS grid to handle layout
 X Portfolio includes at least one link to Github, LinkedIn, or other social media
-Portfolio page must be deployed to Github pages. This is a free hosting service provided by Github. You should name your repository your-username.github.io. The result is that your page will be publicly available at http://your-username.github.io. -->
+X Portfolio page must be deployed to Github pages. This is a free hosting service provided by Github. You should name your repository your-username.github.io. The result is that your page will be publicly available at http://your-username.github.io. -->
