--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="box food"><a href="#">Food</a></div>
         <div class="box fun"><a href="#">Fun</a></div>        
     </div>
-    <footer class="bottom"><span>&copy; 2019 Justin D. Cotton | <a href="https://github.com/JustinCotton?tab=repositories">GitHub</a> | <a href="https://www.linkedin.com/in/justindcotton/">LinkedIn</a></span></footer>
+    <footer class="bottom"><span>&copy; 2019 Justin D. Cotton | <a href="https://github.com/JustinCotton?tab=repositories" target="new">GitHub</a> | <a href="https://www.linkedin.com/in/justindcotton/" target="new">LinkedIn</a></span></footer>
 </body>
 </html>
 
