--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=El+Messiri|Monoton" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=El+Messiri|Monoton|Playball" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Justin's Incredibly Warm Portfolio</title>
+    <title>Seething Cauldron</title>
 </head>
 <body>
-    <header>Software That Scorches</header>
+    <header>Seething Cauldron</header>
     <div class="container"> 
         <div class="box about"><a href="#">About</a></div>
         <div class="box vitae"><a href="#">CV</a></div>
@@ -21,14 +22,14 @@
         <div class="box food"><a href="#">Food</a></div>
         <div class="box fun"><a href="#">Fun</a></div>        
     </div>
-    <footer class="bottom"><span>&copy; 2019 Justin D. Cotton | <a href="https://github.com/JustinCotton?tab=repositories" target="new">GitHub</a> | <a href="https://www.linkedin.com/in/justindcotton/" target="new">LinkedIn</a></span></footer>
+    <footer class="bottom"><span>&copy; 2019 Justin D. Cotton <a href="https://github.com/JustinCotton?tab=repositories" target="new"><i class="fab fa-github"></i></a></span></footer>
 </body>
 </html>
 
 <!-- 
 Portfolio page passes the W3 HTML validator
 Portfolio page pass the W3 CSS validator
-Student uses git to commit work early and often
+X Student uses git to commit work early and often
 X Student demonstrates separation of concerns: separate html and linked css documents
 X Student uses semantic HTML elements
 X Portfolio includes at least one image
