--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 </html>
 
 <!-- 
-Portfolio page passes the W3 HTML validator
-Portfolio page pass the W3 CSS validator
+x Portfolio page passes the W3 HTML validator
+x Portfolio page pass the W3 CSS validator
 X Student uses git to commit work early and often
 X Student demonstrates separation of concerns: separate html and linked css documents
 X Student uses semantic HTML elements
