"Updated HTML and CSS"

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=El+Messiri|Monoton|Playball" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=El+Messiri" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Playball" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Seething Cauldron</title>
 </head>
@@ -27,8 +29,8 @@
 </html>
 
 <!-- 
-Portfolio page passes the W3 HTML validator
-Portfolio page pass the W3 CSS validator
+x Portfolio page passes the W3 HTML validator
+x Portfolio page pass the W3 CSS validator
 X Student uses git to commit work early and often
 X Student demonstrates separation of concerns: separate html and linked css documents
 X Student uses semantic HTML elements
