--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="box startups"><a href="#">Startups</a></div>        
         <div class="box travel"><a href="#">Travel</a></div>
         <div class="box food"><a href="#">Food</a></div>
-        <div class="box fun"><a href="#">Fun</a></div>        
+        <div class="box fun"><a href="#">Fun!</a></div>        
     </div>
     <footer class="bottom"><span>&copy; 2019 Justin D. Cotton <a href="https://github.com/JustinCotton?tab=repositories" target="new"><i class="fab fa-github"></i></a></span></footer>
 </body>
