--- a/index.html
+++ b/index.html
@@ -24,17 +24,12 @@
         <div class="box food"><a href="#">Food</a></div>
         <div class="box fun"><a href="#">Fun!</a></div>        
     </div>
-    <footer class="bottom"><span>&copy; 2019 Justin D. Cotton <a href="https://github.com/JustinCotton?tab=repositories" target="new"><i class="fab fa-github"></i></a></span></footer>
+    <footer class="bottom">
+        <span>
+            &copy; 2019 Justin D. Cotton
+            <a href="https://github.com/JustinCotton?tab=repositories" target="new"><i class="fab fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/justindcotton/" target="new"><i class="fab fa-linkedin"></i></a>
+        </span>
+    </footer>
 </body>
 </html>
-
-<!-- 
-x Portfolio page passes the W3 HTML validator
-x Portfolio page pass the W3 CSS validator
-X Student uses git to commit work early and often
-X Student demonstrates separation of concerns: separate html and linked css documents
-X Student uses semantic HTML elements
-X Portfolio includes at least one image
-X Portfolio includes some flexbox or CSS grid to handle layout
-X Portfolio includes at least one link to Github, LinkedIn, or other social media
-X Portfolio page must be deployed to Github pages. This is a free hosting service provided by Github. You should name your repository your-username.github.io. The result is that your page will be publicly available at http://your-username.github.io. -->
