Edited GitHub link in footer

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <footer class="bottom">
         <span>
             &copy; 2019 Justin D. Cotton
-            <a href="https://github.com/JustinCotton?tab=repositories" target="new"><i class="fab fa-github"></i></a>
+            <a href="https://github.com/JustinCotton" target="new"><i class="fab fa-github"></i></a>
             <a href="https://www.linkedin.com/in/justindcotton/" target="new"><i class="fab fa-linkedin"></i></a>
         </span>
     </footer>
