Updated file structure and added CV

--- a/index.html
+++ b/index.html
@@ -8,21 +8,27 @@
     <link href="https://fonts.googleapis.com/css?family=El+Messiri" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Playball" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
     <title>Seething Cauldron</title>
 </head>
 <body>
     <header>Seething Cauldron</header>
-    <div class="container"> 
-        <div class="box about"><a href="#">About</a></div>
-        <div class="box vitae"><a href="#">CV</a></div>
-        <div class="box contact"><a href="#">Contact</a></div>
-        <div class="box tools"><a href="#">Tools</a></div>
-        <div class="box projects"><a href="#">Projects</a></div>
-        <div class="box startups"><a href="#">Startups</a></div>        
-        <div class="box travel"><a href="#">Travel</a></div>
-        <div class="box food"><a href="#">Food</a></div>
-        <div class="box fun"><a href="#">Fun!</a></div>        
+    <div class="container">
+        <div>
+            <div class="box about"><a href="#">About</a></div>
+            <div class="box vitae"><a href="./img/JustinCottonResumeSoftware.pdf" target="new">CV</a></div>
+            <div class="box contact"><a href="#">Contact</a></div>
+        </div>
+        <div>
+            <div class="box tools"><a href="#">Tools</a></div>
+            <div class="box projects"><a href="#">Projects</a></div>
+            <div class="box startups"><a href="#">Startups</a></div>
+        </div>
+        <div>
+            <div class="box travel"><a href="#">Travel</a></div>
+            <div class="box food"><a href="#">Food</a></div>
+            <div class="box fun"><a href="#">Fun!</a></div>   
+        </div>     
     </div>
     <footer class="bottom">
         <span>
