Updated styling and added images

--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
 </head>
 <body>
     <header>Seething Cauldron</header>
+    <!-- <div>
+        <img src="./img/PortfolioHeadshot.jpg" class="headshot"/>
+    </div> -->
     <div class="container">
         <div>
             <div class="box about"><a href="#">About</a></div>
-            <div class="box vitae"><a href="./img/JustinCottonResumeSoftware.pdf" target="new">CV</a></div>
+            <div class="box vitae"><a href="./img/JustinCottonResumeSoftware.pdf" target="pdf-frame">CV</a></div>
             <div class="box contact"><a href="#">Contact</a></div>
         </div>
         <div>
