--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
             <div class="box projects"><a href="#">Projects</a></div>
             <div class="box startups"><a href="#">Startups</a></div>
         </div>
-        <div>
+        <!-- <div>
             <div class="box travel"><a href="#">Travel</a></div>
             <div class="box food"><a href="#">Food</a></div>
             <div class="box fun"><a href="#">Fun!</a></div>   
-        </div>     
+        </div>      -->
     </div>
     <footer class="bottom">
         <span>
