--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
     <title>Seething Cauldron</title>
 </head>
 <body>
-    <header>Seething Cauldron</header>
-    <!-- <div>
+    <header>Justin D. Cotton <span class="subtitle">Software Developer</span>
+        <a href="https://github.com/JustinCotton" target="new"><i class="fab fa-github"></i></a>
+        <a href="https://www.linkedin.com/in/justindcotton/" target="new"><i class="fab fa-linkedin"></i></a>
+    </header>
+    <div>
         <img src="./img/PortfolioHeadshot.jpg" class="headshot"/>
-    </div> -->
+    </div>
     <div class="container">
         <div>
             <div class="box about"><a href="#">About</a></div>
@@ -33,12 +36,12 @@
             <div class="box fun"><a href="#">Fun!</a></div>   
         </div>      -->
     </div>
-    <footer class="bottom">
+    <!-- <footer class="bottom">
         <span>
             &copy; 2019 Justin D. Cotton
             <a href="https://github.com/JustinCotton" target="new"><i class="fab fa-github"></i></a>
             <a href="https://www.linkedin.com/in/justindcotton/" target="new"><i class="fab fa-linkedin"></i></a>
         </span>
-    </footer>
+    </footer> -->
 </body>
 </html>
