--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
         <a href="https://github.com/JustinCotton" target="new"><i class="fab fa-github"></i></a>
         <a href="https://www.linkedin.com/in/justindcotton/" target="new"><i class="fab fa-linkedin"></i></a>
     </header>
-    <div>
+    <div class="leftpanel">
         <img src="./img/PortfolioHeadshot.jpg" class="headshot"/>
+        <p class="bio">Having completed a 12-week, full-time software bootcamp, I am excited to create useful, powerful, and scalable applications that entertain and delight end users. I create software (React, Python, Javascript), smart contracts (Solidity), and decentralized apps (Ethereum blockchain)for the entrepreneurs of tomorrow.</p>
     </div>
     <div class="container">
         <div>
