--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Playball" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./css/style.css">
-    <title>Seething Cauldron</title>
+    <title>Seething Cauldron!</title>
 </head>
 <body>
     <header>Justin D. Cotton <span class="subtitle">Software Developer</span>
