--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
     <div class="leftpanel">
         <img src="./img/PortfolioHeadshot.jpg" class="headshot"/>
-        <p class="bio">Having completed a 12-week, full-time software bootcamp, I am excited to create useful, powerful, and scalable applications that entertain and delight end users. I create software (React, Python, Javascript), smart contracts (Solidity), and decentralized apps (Ethereum blockchain) for the entrepreneurs of tomorrow.</p>
+        <!-- <p class="bio">Having completed a 12-week, full-time software bootcamp, I am excited to create useful, powerful, and scalable applications that entertain and delight end users. I create software (React, Python, Javascript), smart contracts (Solidity), and decentralized apps (Ethereum blockchain) for the entrepreneurs of tomorrow.</p> -->
     </div>
     <div class="container">
         <div>
@@ -37,12 +37,13 @@
             <div class="box fun"><a href="#">Fun!</a></div>   
         </div>      -->
     </div>
-    <!-- <footer class="bottom">
-        <span>
+    <footer class="bottom">
+        <p class="bio">Having completed a 12-week, full-time software bootcamp, I am excited to create useful, powerful, and scalable applications that entertain and delight end users. I create software (React, Python, Javascript), smart contracts (Solidity), and decentralized apps (Ethereum blockchain) for the entrepreneurs of tomorrow.</p>
+        <!-- <span>
             &copy; 2019 Justin D. Cotton
             <a href="https://github.com/JustinCotton" target="new"><i class="fab fa-github"></i></a>
             <a href="https://www.linkedin.com/in/justindcotton/" target="new"><i class="fab fa-linkedin"></i></a>
-        </span>
-    </footer> -->
+        </span> -->
+    </footer>
 </body>
 </html>
