Updated styling and content

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <!-- <p class="bio">Having completed a 12-week, full-time software bootcamp, I am excited to create useful, powerful, and scalable applications that entertain and delight end users. I create software (React, Python, Javascript), smart contracts (Solidity), and decentralized apps (Ethereum blockchain) for the entrepreneurs of tomorrow.</p> -->
     </div>
     <div class="container">
-        <div>
+        <!-- <div>
             <div class="box about"><a href="#">About</a></div>
             <div class="box vitae"><a href="./img/JustinCottonResumeSoftware.pdf" target="pdf-frame">CV</a></div>
             <div class="box contact"><a href="#">Contact</a></div>
@@ -30,6 +30,12 @@
             <div class="box tools"><a href="#">Tools</a></div>
             <div class="box projects"><a href="#">Projects</a></div>
             <div class="box startups"><a href="#">Startups</a></div>
+        </div> -->
+        <div>
+            <div class="box"><a href="#">Blackjack</a></div>
+            <div class="box"><a href="#">Monster League Baseball</a></div>
+            <div class="box"><a href="#">Planet Killer!</a></div>
+            <div class="box"><a href="#">Playoffs or BUST!</a></div>
         </div>
         <!-- <div>
             <div class="box travel"><a href="#">Travel</a></div>
