Updated styling and content

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Playball" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./css/style.css">
-    <title>Seething Cauldron!</title>
+    <title>Seething Cauldron</title>
 </head>
 <body>
     <header>Justin D. Cotton <span class="subtitle">Software Developer</span>
@@ -32,10 +32,10 @@
             <div class="box startups"><a href="#">Startups</a></div>
         </div> -->
         <div>
-            <div class="box"><a href="#">Blackjack</a></div>
-            <div class="box"><a href="#">Monster League Baseball</a></div>
-            <div class="box"><a href="#">Planet Killer!</a></div>
-            <div class="box"><a href="#">Playoffs or BUST!</a></div>
+            <div class="box"><a href="https://justincotton.github.io/blackjack/">Blackjack</a></div>
+            <div class="box"><a href="https://monster-league-baseball.herokuapp.com/">Monster League Baseball</a></div>
+            <div class="box"><a href="https://planet-killer.herokuapp.com/">Planet Killer!</a></div>
+            <div class="box"><a href="https://playoffs-or-bust.herokuapp.com/">Playoffs or BUST!</a></div>
         </div>
         <!-- <div>
             <div class="box travel"><a href="#">Travel</a></div>
