Updated styling and content

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
             <div class="box startups"><a href="#">Startups</a></div>
         </div> -->
         <div>
-            <div class="box"><a href="https://justincotton.github.io/blackjack/">Blackjack</a></div>
-            <div class="box"><a href="https://monster-league-baseball.herokuapp.com/">Monster League Baseball</a></div>
-            <div class="box"><a href="https://planet-killer.herokuapp.com/">Planet Killer!</a></div>
-            <div class="box"><a href="https://playoffs-or-bust.herokuapp.com/">Playoffs or BUST!</a></div>
+            <div class="box"><a href="https://justincotton.github.io/blackjack/" target="new">Blackjack</a></div>
+            <div class="box"><a href="https://monster-league-baseball.herokuapp.com/" target="new">Monster League Baseball</a></div>
+            <div class="box"><a href="https://planet-killer.herokuapp.com/" target="new">Planet Killer!</a></div>
+            <div class="box"><a href="https://playoffs-or-bust.herokuapp.com/" target="new">Playoffs or BUST!</a></div>
         </div>
         <!-- <div>
             <div class="box travel"><a href="#">Travel</a></div>
