Updated project link styling to match apps

--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=El+Messiri" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Playball" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Audiowide|Creepster|Graduate|Monoton|Playball&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     <title>Seething Cauldron</title>
 </head>
@@ -32,10 +30,10 @@
             <div class="box startups"><a href="#">Startups</a></div>
         </div> -->
         <div>
-            <div class="box"><a href="https://justincotton.github.io/blackjack/" target="_blank">Blackjack</a></div>
-            <div class="box"><a href="https://monster-league-baseball.herokuapp.com/" target="_blank">Monster League Baseball</a></div>
-            <div class="box"><a href="https://planet-killer.herokuapp.com/" target="_blank">Planet Killer!</a></div>
-            <div class="box"><a href="https://playoffs-or-bust.herokuapp.com/" target="_blank">Playoffs or BUST!</a></div>
+            <div class="box blackjacks"><a href="https://justincotton.github.io/blackjack/" target="_blank">Blackjack</a></div>
+            <div class="box monsters"><a href="https://monster-league-baseball.herokuapp.com/" target="_blank">Monster League Baseball</a></div>
+            <div class="box planets"><a href="https://planet-killer.herokuapp.com/" target="_blank">Planet Killer!</a></div>
+            <div class="box playoffs"><a href="https://playoffs-or-bust.herokuapp.com/" target="_blank">Playoffs or BUST!</a></div>
         </div>
         <!-- <div>
             <div class="box travel"><a href="#">Travel</a></div>
