Added CV link to navbar

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <header>Justin D. Cotton <span class="subtitle">Software Developer</span>
         <a href="https://github.com/JustinCotton" target="new"><i class="fab fa-github"></i></a>
         <a href="https://www.linkedin.com/in/justindcotton/" target="new"><i class="fab fa-linkedin"></i></a>
+        <a href="./img/JustinCottonResumeSoftware.pdf" target="pdf-frame"><i class="far fa-id-card"></i></a>
     </header>
     <div class="leftpanel">
         <img src="./img/PortfolioHeadshot.jpg" class="headshot"/>
