--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div>
             <div class="box blackjacks"><a href="https://justincotton.github.io/blackjack/" target="_blank">Blackjack</a></div>
             <div class="box monsters"><a href="https://monster-league-baseball.herokuapp.com/" target="_blank">Monster League Baseball</a></div>
-            <div class="box planets"><a href="https://planet-killer.herokuapp.com/" target="_blank">Planet Killer!</a></div>
+            <div class="box planets"><a href="https://planet-killer.herokuapp.com/" target="_blank">PLANET KILLER!</a></div>
             <div class="box playoffs"><a href="https://playoffs-or-bust.herokuapp.com/" target="_blank">Playoffs or BUST!</a></div>
         </div>
         <!-- <div>
