Changed headshot image

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a href="./img/JustinCottonResumeSoftware.pdf" target="pdf-frame"><i class="far fa-id-card"></i></a>
     </header>
     <div class="leftpanel">
-        <img src="./img/PortfolioHeadshot.jpg" class="headshot"/>
+        <img src="./img/PortfolioHeadshot2.jpg" class="headshot"/>
         <!-- <p class="bio">Having completed a 12-week, full-time software bootcamp, I am excited to create useful, powerful, and scalable applications that entertain and delight end users. I create software (React, Python, Javascript), smart contracts (Solidity), and decentralized apps (Ethereum blockchain) for the entrepreneurs of tomorrow.</p> -->
     </div>
     <div class="container">
